@@ -23,6 +23,7 @@ t/ioasync.t
 t/mojo.t
 t/multi_return.t
 t/promise_all_race.t
+t/reject_undef.t
 t/subclass.t
 t/sync.t
 t/unhandled_rejection.t
